# mailing_service

./: README.md  datablogs.json  datamailings.json  groups.json  pyproject.toml
blogs/: forms.py  models.py  services.py  urls.py  views.py
blogs/migrations/: 0001_initial.py  0002_alter_blog_created_at.py
blogs/templates/blogs/: blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html
config/: settings.py  urls.py
fixtures/: blogs.json  groups.json  mailings.json
mailings/: admin.py  apps.py  forms.py  models.py  scheduler.py  urls.py  utils.py  views.py
mailings/management/commands/: runapscheduler.py  start_send_mailing.py  start_test_print_time.py
mailings/migrations/: 0001_initial.py  0002_alter_logsattempt_status_and_more.py  0003_clientservice_owner_mailingsettings_owner_and_more.py  0004_alter_mailingsettings_options.py  0005_rename_messageletter_message.py
mailings/templates/mailings/: base.html  clientservice_confirm_delete.html  clientservice_detail.html  clientservice_form.html  clientservice_list.html  logsattempt_list.html  mailingsettings_confirm_delete.html  mailingsettings_detail.html  mailingsettings_form.html  mailingsettings_list.html  main_page.html  message_confirm_delete.html  message_detail.html  message_list.html  messageletter_form.html  messageletter_list.html
users/: admin.py  forms.py  models.py  urls.py  views.py
users/management/commands/: cmu.py
users/migrations/: 0001_initial.py  0002_alter_user_options.py
users/templates/users/: login.html  update_user.html  user_form.html  user_list.html
(+1 files in other folders)
