[tool.poetry]
name = "mailing-service-git"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.4"
psycopg2 = "^2.9.9"
pytz = "^2024.1"
django-apscheduler = "^0.6.2"
pillow = "^10.3.0"
redis = "^5.0.4"
python-dotenv = "^1.0.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
